fixed a problem with alt attributes not being completely wrapped in quotations. also changed max-width to 1200 on body container.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@
 
 @media only screen and (min-width: 1200px) {
     .container {
-        max-width: 1140px;
+        max-width: 1200px;
         margin: 0% 25% 0% 25%;
 
     }
